setting homepage url

--- a/package.json
+++ b/package.json
@@ -20,5 +20,5 @@
   "bugs": {
     "url": "https://github.com/devmueez/b2w/issues"
   },
-  "homepage": "https://github.com/devmueez/b2w#readme"
+  "homepage": "https://github.com/devmueez/b2w"
 }
